Initial event bus code

--- a/src/main/resources/plugin.xml
+++ b/src/main/resources/plugin.xml
@@ -4,7 +4,7 @@
         name="Plugin to unmarshall properties"
         version="1.0"
         provider-name="modeldriven.hu"
-        class="hu.modeldriven.cameo.UnmarshallPlugin">
+        class="hu.modeldriven.cameo.unmarshall.UnmarshallPlugin">
 
     <requires>
         <api version="1.2"/>
